Added email form, and push to emails list.

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/errorMessages.css",
+              "src/assets/css/globalFab.css",
+              "src/assets/css/newEmail.css",
+              "src/assets/css/tooltip.css"
             ],
             "scripts": []
           },
@@ -89,7 +93,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css"  
             ],
             "scripts": []
           }
